# Tator-Native

./: .gitignore  CMakeLists.txt  Example-Annotation Tool Output-9_25_2015.csv  FishGUI_Manual.docx  LICENSE.md  README.md
FishGUI/: .directory  MainWindow.cpp  MainWindow.h  MainWindow.pro  Makefile  Makefile.Debug  Makefile.Release  README.txt  TODO.txt  annotatedregion.cpp  annotatedregion.h  csvio.cpp  csvio.h  document.cpp  document.h  fish.cpp  fish.h  fishSerialize.pb.cc  fishSerialize.pb.h  fishSerialize.proto  fishguibuild  mainWindow.h  mainwindow.cpp  mainwindow.h  mainwindow.pro  mainwindow.ui  mainwindowbuttons.cpp  moc_MainWindow.cpp  moc_player.cpp  navigatorwidget.cpp  navigatorwidget.h  navigatorwidget.ui  player.cpp  player.h  simple_test.csv  ui_mainwindow.h  ui_navigatorwidget.h  uicOutput.h  unit_test.cpp
FishGUI/debug/: fishguibuild.ilk
Python/: Fish.py
UnitTests/: UnitTests.pro  test.json  testDocument.cpp  testDocument.h  unit_test.cpp
Video_Slicer/Video_Slicer/: Video_Slicer.pro  mainwindow.cpp  mainwindow.h
cmake/: FishDetFindLibs.cmake  FishDetFindLibsHints.cmake.in  TatorFindLibs.cmake
config/: CMakeLists.txt  default.colors  default.species
doc/: CMakeLists.txt  build.md  build_docs.md  build_installer.md  build_mac.md  build_ubuntu.md  build_windows.md  default.global  default.input_database  default.output_database  developer.md  doxyfile  doxyfile_manual  manual.md  manual.md.in  namespaces.dox  scallop.species
doc/icons/: FishAnnotator.icns
include/fish_annotator/common/: annotated_dot.h  annotated_line.h  annotatedregion.h  annotation_scene.h  annotation_view.h  annotation_widget.h  metadata.h  metadata_dialog.h  rect.h  serialization.h  species.h  species_controls.h  species_dialog.h  species_widget.h
include/fish_annotator/db_uploader/: mainwindow.h
include/fish_annotator/image_annotator/: image_annotation.h  mainwindow.h
include/fish_annotator/video_annotator/: document.h  fish.h  mainwindow.h  metadata.h  metadata_dialog.h  navigatorwidget.h  player.h  reassign_dialog.h  scene.h  video_annotation.h
include/fish_annotator/video_slicer/: mainwindow.h
include/fish_detector/common/: annotatedregion.h  rect.h  serialization.h  species.h  species_controls.h  species_dialog.h  species_widget.h
include/fish_detector/gui/: annotatedregion.h  document.h  fish.h  mainwindow.h  navigatorwidget.h  player.h
include/fish_detector/image_annotator/: image_annotation.h  image_annotations.h  mainwindow.h
include/fish_detector/video_annotator/: annotatedregion.h  document.h  fish.h  mainwindow.h  navigatorwidget.h  player.h
include/fish_detector/video_slicer/: mainwindow.h
res/: resources.qrc
res/icons/cvision/: cvision_no_text.icns
sandbox/net_removal/: CMakeLists.txt
sandbox/net_removal/cmake/: NRFindLibs.cmake  NRFindLibsHints.cmake
sandbox/net_removal/include/: partition.h
sandbox/net_removal/python/: partition.py  run_alg.py
sandbox/net_removal/src/: CMakeLists.txt  partition.cc
sandbox/net_removal/test/: CMakeLists.txt  test_partition.cc
src/: CMakeLists.txt
src/common/: CMakeLists.txt  annotated_dot.h  annotated_line.h  annotatedregion.h  annotation_scene.cc  annotation_scene.h  annotation_view.cc  annotation_view.h  annotation_widget.cc  annotation_widget.h  annotation_widget.ui  color_scheme.cc  color_scheme.h  global_state_annotation.cc  global_state_annotation.h  global_state_widget.cc  global_state_widget.h  global_state_widget.ui  globalstatescrollarea.cc  globalstatescrollarea.h  globalstatescrollarea.ui  metadata.h  metadata_dialog.cc  metadata_dialog.h  metadata_dialog.ui  rect.cc  rect.h  serialization.cc  serialization.h  species.cc  species.h  species_controls.cc  species_controls.h  species_controls.ui  species_dialog.cc  species_dialog.h  species_dialog.ui  species_widget.cc  species_widget.h  species_widget.ui  (+3 more)
src/db_uploader/: .CMakeLists.txt.un~  CMakeLists.txt  database_info.cc  database_info.h  db_uploader.rc  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui
src/gui/: CMakeLists.txt  annotatedregion.cc  document.cc  fish.cc  main.cc  mainwindow.cc  mainwindow.ui  mainwindowbuttons.cc  mainwindowmenus.cc  navigatorwidget.cc  navigatorwidget.ui  player.cc
src/image_annotator/: .CMakeLists.txt.un~  CMakeLists.txt  image_annotation.cc  image_annotation.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui
src/video_annotator/: .CMakeLists.txt.un~  CMakeLists.txt  annotatedregion.cc  document.cc  fish.cc  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  mainwindowbuttons.cc  mainwindowmenus.cc  metadata_dialog.cc  metadata_dialog.ui  navigatorwidget.cc  navigatorwidget.ui  player.cc  player.h  playlist.cc  playlist.h  playlist_view.cc  playlist_view.h  playlist_view.ui  reassign_dialog.cc  reassign_dialog.h  reassign_dialog.ui  scene.cc  video_annotation.cc  video_annotation.h  video_annotator.rc  workspace.cc  workspace.h
src/video_slicer/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.ui
test/: CMakeLists.txt
test/document/: CMakeLists.txt  testDocument.h  test_document.cc  test_document.h
test/image_annotation/: CMakeLists.txt  test_image_annotation.cc  test_image_annotation.h
test/image_annotator/: CMakeLists.txt  blah.json  test_image_annotator.cc  test_image_annotator.h
test/species/: CMakeLists.txt  test_species.cc  test_species.h
test/video_annotation/: CMakeLists.txt  test_video_annotation.cc  test_video_annotation.h
test/video_annotator/: CMakeLists.txt  test_video_annotator.cc  test_video_annotator.h
ui/gui/: mainwindow.ui
ui/video_slicer/: mainwindow.ui
