add_subdirectory( common )
if( ${BUILD_IMAGE_ANNOTATOR} )
  add_subdirectory( image_annotator )
endif()
if( ${BUILD_VIDEO_ANNOTATOR} )
  add_subdirectory( video_annotator )
endif()

if( WIN32 )
  if( ${BUILD_DB_UPLOADER} )
    add_subdirectory( db_uploader )
  endif()
  if( ${BUILD_VIDEO_ANNOTATOR} )
    file( GLOB FFMPEG_DLLS ${FFMPEG_LIBRARY_DIR}/*.dll )
    install( FILES ${FFMPEG_DLLS} DESTINATION . )
  endif()
endif()
